--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,8 +1,9 @@
-nav class="relative bg-primary p-4 text-white md:fixed md:z-10 md:w-full"
-  div class="flex items-center justify-between"
-    a href="#" My CookBook
-    ul class="mx-auto flex w-[1128px] space-x-4 md:hidden lg:ml-20"
-      li
-        a href="/ingredients" class="flex items-center gap-1 rounded px-6 py-2 hover:bg-white hover:bg-opacity-20 md:px-4 #{controller == "ingredients" ? "bg-white bg-opacity-20" : ""}" Ingredients
-      li
-        a href="/foods" class="flex items-center gap-1 rounded px-6 py-2 hover:bg-white hover:bg-opacity-20 md:px-4  #{controller == "foods" ? "bg-white bg-opacity-20" : ""}" Foods
+header class="absolute inset-x-0 top-0 z-50"
+  nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global"
+    div class="flex lg:flex-1"
+      a href="#" class="-m-1.5 p-1.5"
+        span My CookBook
+    div class="hidden lg:flex lg:gap-x-12"
+      a href="/ingredients" class="text-sm font-semibold leading-6 text-gray-900" Ingredients
+      a href="/foods" class="text-sm font-semibold leading-6 text-gray-900" Foods
+    div class="hidden lg:flex lg:flex-1 lg:justify-end"
