Add multiple select

--- a/app/views/ingredients/index.html.slim
+++ b/app/views/ingredients/index.html.slim
@@ -2,6 +2,7 @@ div class="mx-auto my-16 max-w-[552px] md:mt-10 md:w-full md:px-4"
   h2 class="mb-8 md:mb-6 md:text-[22px]" Ingredients
   div class="mt-10 mt-10"
     = render 'form', ingredient: @ingredient
+    = render 'test_multiple_select'
   div class="mt-10 mt-10"
     table class="ingredient w-full border-collapse border border-slate-400"
       thead
