--- a/app/views/ingredients/_popup.html.slim
+++ b/app/views/ingredients/_popup.html.slim
@@ -1,6 +1,6 @@
 button data-controller="ingredient" data-action="click->ingredient#new" class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:text-white" type="button" Create
 / <!-- Main modal -->
-div id="ingredient-popup" tabindex="-1" data-modal-target="static-modal" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full"
+div id="ingredient-popup" tabindex="-1" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full"
   div class="relative p-4 w-full max-w-md max-h-full"
     / <!-- Modal content -->
     div class="relative bg-white rounded-lg shadow dark:bg-gray-700"
