--- a/app/views/ingredients/_popup.html.slim
+++ b/app/views/ingredients/_popup.html.slim
@@ -6,7 +6,7 @@ div id="ingredient-popup" tabindex="-1" class="hidden overflow-y-auto overflow-x
     div class="relative bg-white rounded-lg shadow dark:bg-gray-700"
       / <!-- Modal header -->
       div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600"
-        h3 class="text-xl font-semibold text-gray-900 dark:text-white" Create Food
+        h3 class="text-xl font-semibold text-gray-900 dark:text-white" Create Ingredient
         button type="button" data-controller="ingredient" data-action="click->ingredient#cancle" class="end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
           svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14"
             path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
@@ -29,4 +29,4 @@ div id="ingredient-popup" tabindex="-1" class="hidden overflow-y-auto overflow-x
               input name="ingredient[color]" type="color" value="#{ingredient.color || '#ffffff'}" class="block w-full rounded-md border-0"
           div class="flex lg:justify-end gap-x-0.5 mt-3"
             = form.submit  class: "w-[150px] block rounded-md bg-indigo-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
-            a href="/ingredients" class="w-[110px] block rounded-md bg-rose-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-rose-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:bg-rose-500" Cancel
+            button data-controller="ingredient" data-action="click->ingredient#cancle" class="w-[110px] block rounded-md bg-rose-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-rose-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:bg-rose-500" Cancel
