--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,9 +1,9 @@
 header class="absolute inset-x-0 top-0 z-50"
   nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global"
     div class="flex lg:flex-1"
-      a href="#" class="-m-1.5 p-1.5"
+      a href="/" class="-m-1.5 p-1.5" data-turbo="false"
         span My CookBook
     div class="hidden lg:flex lg:gap-x-12"
-      a href="/ingredients" class="text-sm font-semibold leading-6 text-gray-900" Ingredients
-      a href="/foods" class="text-sm font-semibold leading-6 text-gray-900" Foods
+      a href="/ingredients" data-turbo="false" class="text-sm font-semibold leading-6 text-gray-900" Ingredients
+      a href="/foods" data-turbo="false" class="text-sm font-semibold leading-6 text-gray-900" Foods
     div class="hidden lg:flex lg:flex-1 lg:justify-end"
