--- a/app/views/foods/index.html.slim
+++ b/app/views/foods/index.html.slim
@@ -11,16 +11,18 @@ div class="mx-auto my-16 w-[800px] md:mt-10 md:px-4"
       tbody
         - if @foods.any?
           - @foods.each do |food|
-            tr class="border border-slate-300"
-              td class="w-6/12 p-2"
+            tr class="border border-slate-300 #{ food.ingredients_sufficient? ? '' : 'bg-slate-200'}"
+              td class="w-3/12 p-2"
                 = food.name
               td class="p-2"
                 - food.food_ingredients.each do |food_ingredient|
                   span class="mr-2" style="background-color: #{ food_ingredient.ingredient_color}"
                     = "#{food_ingredient.ingredient_name}(#{food_ingredient.count})"
               td class="w-full p-2 flex gap-x-1 justify-end"
-                button data-controller="food" data-action="click->food#edit" data-food-id-value="#{food.id}" class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:text-white" Edit
-                button data-reflex="click->Food#delete" data-id="#{food.id}" class="block rounded-md bg-rose-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-rose-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:bg-rose-500" Delete
+                button data-controller="food" data-action="click->food#edit" data-food-id-value="#{food.id}" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800" Edit
+                button data-reflex="click->Food#delete" data-id="#{food.id}" class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900" Delete
+                - if food.ingredients_sufficient?
+                  = link_to "Add Dish", add_to_daily_dish_food_path(id: food.id), class: "ocus:outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:focus:ring-yellow-900"
 
 
 
